clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/return_borrow_loop/return_borrow_loop.cbs
// RUN: %clang_cc1 -verify %s

struct S {
  int *_Borrow p;
};

struct G {
  struct S s;
};

int rand();
T *owned safe_malloc<T>(T value);
void free_owned<T>(T *owned p);
void free(void *);

int *_Borrow test1(int *_Borrow p) {
  int local = 42;
  while (rand())
    return &_Mut local; // expected-error {{`local` does not live long enough}}
                       // expected-note@-1 {{`local` dropped here while still borrowed}}
  return &_Mut local; // expected-error {{`local` does not live long enough}}
                     // expected-note@-1 {{`local` dropped here while still borrowed}}
}

int *_Borrow test2(int *_Borrow p) {
  int local = 42;
  while (0)
    return &_Mut local; // expected-error {{`local` does not live long enough}}
                       // expected-note@-1 {{`local` dropped here while still borrowed}}
  return &_Mut local; // expected-error {{`local` does not live long enough}}
                     // expected-note@-1 {{`local` dropped here while still borrowed}}
}

int *_Borrow test3(int *_Borrow p) {
  int local = 42;
  while (rand())
    p = &_Mut local; // expected-error {{`local` does not live long enough}}
  return p; // expected-note {{`local` dropped here while still borrowed}}
}

int *_Borrow test4(int *_Borrow p) {
  while (rand()) {
    for (int i = 0; i < 5; i++) {
      if (rand()) {
        int local1 = 5;
        p = &_Mut local1; // expected-error {{`local1` does not live long enough}}
      } else { // expected-note {{`local1` dropped here while still borrowed}}
        int local2 = 5;
        p = &_Mut local2; // expected-error {{`local2` does not live long enough}}
      } // expected-note {{`local2` dropped here while still borrowed}}
    }
  }
  return p;
}

struct S test5(struct S s) {
  int local = 5;
  while (rand())
    s.p = &_Mut local; // expected-error {{`local` does not live long enough}}
                      // expected-error@-1 {{cannot borrow `local` as mutable more than once at a time}}
                      // expected-note@-2 {{first mut borrow occurs here}}
  return s; // expected-note {{`local` dropped here while still borrowed}}
}

struct S test6(struct G g) {
  int local = 5;
  while (rand())
    g.s.p = &_Mut local; // expected-error {{`local` does not live long enough}}
                        // expected-error@-1 {{cannot borrow `local` as mutable more than once at a time}}
                        // expected-note@-2 {{first mut borrow occurs here}}
  return g.s; // expected-note {{`local` dropped here while still borrowed}}
}

struct G test7(struct G g) {
  int local = 5;
  while (rand())
    g.s.p = &_Mut local; // expected-error {{`local` does not live long enough}}
                        // expected-error@-1 {{cannot borrow `local` as mutable more than once at a time}}
                        // expected-note@-2 {{first mut borrow occurs here}}
  return g; // expected-note {{`local` dropped here while still borrowed}}
}